bat.string1.lessons.bat.string1.Last2.scala.error
last2:2: error: value lenght is not a member of String
  var str1 = str.charAt(str.lenght-2);
                            ^last2:3: error: value lenght is not a member of String
  var str2 = str.charAt(str.lenght-3);
                            ^last2:7: error: value lenght is not a member of String
  for(i<-0 to str.lenght-3){
                  ^