bat.string1.lessons.bat.string1.Last2.scala.code
def last2(str:String):Int = {
  var str1 = str.charAt(str.lenght-2);
  var str2 = str.charAt(str.lenght-3);
  
  var nb:Int = 0;
  
  for(i<-0 to str.lenght-3){
    if(str.charAt(i)==str1 && str.charAt(i+1)==str2){
      nb+=4;
    }
  }
  
  return nb;
}